移除部分组字

--- a/OEBPS/Text/1298.html
+++ b/OEBPS/Text/1298.html
@@ -575,7 +575,7 @@
 中廬令，漢舊縣，屬南郡。
 </p>
 <p class="margin2" id="p190"><a class="gg-link" href="#p190" onclick="return changeColor(this);"></a>
-{巴阝}縣令，<span class="jiaozhusup">按前漢志南郡有邔縣。孟康曰：「音忌。」師古曰：「音其已反。」舊本續漢志訛作「印」。集解引惠棟曰：「前志及本傳皆作邔。章懷音其紀反。」錢大昕曰：「淄川王終子柱，封邔侯。」說文邑部：「邔，南郡縣也。從邑已聲。」水經：「禹貢三澨沱，在南郡邔縣北。」南齊書州郡志、晉書地理志並作「邔」。或謂「{巴阝}」字不誤，古漢上之巴國邑此，待考。</span>漢舊縣，屬南郡。
+󿸳縣令，<span class="jiaozhusup">按前漢志南郡有邔縣。孟康曰：「音忌。」師古曰：「音其已反。」舊本續漢志訛作「印」。集解引惠棟曰：「前志及本傳皆作邔。章懷音其紀反。」錢大昕曰：「淄川王終子柱，封邔侯。」說文邑部：「邔，南郡縣也。從邑已聲。」水經：「禹貢三澨沱，在南郡邔縣北。」南齊書州郡志、晉書地理志並作「邔」。或謂「󿸳」字不誤，古漢上之巴國邑此，待考。</span>漢舊縣，屬南郡。
 </p>
 <p class="em2" id="p191"><a class="gg-link" href="#p191" onclick="return changeColor(this);"></a>
 南陽太守，秦立，屬荊州。永初郡國有比陽、魯陽、赭陽、西鄂、犨、葉、雉、博望八縣。<span class="jiazhu">並漢舊縣。</span>何志無犨、雉。徐志無比陽、魯陽、赭陽、西鄂、博望，而有葉，餘並同。孝武大明元年，省葉縣。領縣七。戶四千七百二十七，口三萬八千一百三十二。去州三百六十。去京都水四千四百。
