--- a/OEBPS/Text/1328.html
+++ b/OEBPS/Text/1328.html
@@ -101,7 +101,7 @@
 訪曩載於宋鄙，採陽秋於魯經。晉申好於東吳，鄭憑威於南荊。故反師於曹門，將以塞於夷庚。納五叛以長寇，伐三邑以侵彭。美西鉏之忠辭，快韓厥之奇兵。
 </p>
 <p class="margin2" id="p32"><a class="gg-link" href="#p32" onclick="return changeColor(this);"></a>
-追項王之故臺，跡霸楚之遺端。挺宏志於總角，奮英勢於弱冠。氣蓋天而倒日，力拔山而傾湍。始飆起於勾越，中電激於衡關。興偏慮於攸吝，忘即易於所難。忌陳錦而莫照，思反鄉而有歎。且夫殺義害嬰，而{忄戞}豐疑，<span class="jiaozhusup">疑句有奪誤。</span>緤賢不策，失位誰持。迨理屈而愈閉，方怨天而懷悲。對駿騅以發憤，傷虞姝於末詞。
+追項王之故臺，跡霸楚之遺端。挺宏志於總角，奮英勢於弱冠。氣蓋天而倒日，力拔山而傾湍。始飆起於勾越，中電激於衡關。興偏慮於攸吝，忘即易於所難。忌陳錦而莫照，思反鄉而有歎。且夫殺義害嬰，而󿸸豐疑，<span class="jiaozhusup">疑句有奪誤。</span>緤賢不策，失位誰持。迨理屈而愈閉，方怨天而懷悲。對駿騅以發憤，傷虞姝於末詞。
 </p>
 <p class="margin2" id="p33"><a class="gg-link" href="#p33" onclick="return changeColor(this);"></a>
 陟亞父之故營，諒謀始之非託。遭衰嬴之崩綱，值威炎之結絡。迄皓首於阜陵，猶謬覺於然諾。視一人於三傑，豈在己之庸弱。置豐沛而不舉，故自同於俎鑊。
