--- a/OEBPS/Text/1328.html
+++ b/OEBPS/Text/1328.html
@@ -155,7 +155,7 @@
 遠東則天台、桐柏，方石、太平，二韭、四明，五奧、三菁。表神異於緯牒，驗感應於慶靈。淩石橋之莓苔，越楢谿之紆縈。<span class="jiazhu">天台、桐柏，七縣餘地，南帶海。二韭、四明、五奧，皆相連接，奇地所無，高於五嶽，便是海中三山之流。韭以菜爲名。四明、方石，四面自然開窗也。五奧者，曇濟道人、蔡氏、郗氏、謝氏、陳氏各有一奧，皆相掎角，並是奇地。三菁，太平之北。太平，天台之始。方石，直上萬丈，下有長谿，亦是縉雲之流云。此諸山並見圖緯，神仙所居。往來要徑石橋，過楢谿，人跡之艱，不復過此也。</span>
 </p>
 <p class="margin2" id="p50"><a class="gg-link" href="#p50" onclick="return changeColor(this);"></a>
-遠南則松箴、棲雞，唐嵫、漫石。崒、嵊對嶺，{山/(目(乚@三))}、孟分隔。入極浦而邅回，迷不知其所適。上嶔崎而蒙籠，下深沈而澆激。<span class="jiazhu">棲雞，在保口之上，別浦入其中，周回甚深，四山之裏。松箴在棲雞之上，緣江。唐嵫入太平水路，上有瀑布數百丈。漫石在唐嵫下，郗景興經始精舍，亦是名山之流。崒、嵊與分界，去山八十里，故曰遠南。前嶺鳥道，正當五十里高，左右所無，就下地形高，乃當不稱。遠望{山/(目(乚@三))}山甚奇，謂白爍尖者最高，下有良田，王敬弘經始精舍。曇濟道人住孟山，名曰孟埭，芋薯之疁田。清溪秀竹，迴開巨石，有趣之極。此中多諸浦澗，傍依茂林，迷不知所通，嶔崎深沈，處處皆然，不但一處。</span>
+遠南則松箴、棲雞，唐嵫、漫石。崒、嵊對嶺，<img class="font-img" src="../Images/1328.png"/>、孟分隔。入極浦而邅回，迷不知其所適。上嶔崎而蒙籠，下深沈而澆激。<span class="jiazhu">棲雞，在保口之上，別浦入其中，周回甚深，四山之裏。松箴在棲雞之上，緣江。唐嵫入太平水路，上有瀑布數百丈。漫石在唐嵫下，郗景興經始精舍，亦是名山之流。崒、嵊與分界，去山八十里，故曰遠南。前嶺鳥道，正當五十里高，左右所無，就下地形高，乃當不稱。遠望<img class="font-img" src="../Images/1328.png"/>山甚奇，謂白爍尖者最高，下有良田，王敬弘經始精舍。曇濟道人住孟山，名曰孟埭，芋薯之疁田。清溪秀竹，迴開巨石，有趣之極。此中多諸浦澗，傍依茂林，迷不知所通，嶔崎深沈，處處皆然，不但一處。</span>
 </p>
 <p class="margin2" id="p51"><a class="gg-link" href="#p51" onclick="return changeColor(this);"></a>
 遠西則<span class="jiazhu">下闕。</span><span class="jiaozhusup">三朝本闕四十字，殿本及謝康樂集闕四十四字，全宋文闕四十三字。以上字數，各本皆據山居賦正文行數計算。一本補「邛州綠嶺，菌桂臨巖。旁挺龍目，側生荔枝。布綠葉之萋萋，結朱實之離離。匝隆冬而不凋，常蔚鬱以依依」。本注云：「本左太沖蜀都賦也。」按龍目、荔枝，越中所不植，此正文及注文四十八字，顯係後人所補，非靈運原作。</span>
