--- a/OEBPS/Text/1278.html
+++ b/OEBPS/Text/1278.html
@@ -134,7 +134,7 @@
 晉武帝泰始三年十一月，改封宗聖侯孔震爲奉聖亭侯。又詔太學及魯國四時備三牲以祀孔子。
 </p>
 <p class="em2" id="p43"><a class="gg-link" href="#p43" onclick="return changeColor(this);"></a>
-明帝太寧三年，詔給事奉聖亭侯孔亭四時祠孔子，祭宜如泰始故事。亭五代孫繼之博塞無度，常以祭直顧進，替慢不祀。宋文帝元嘉八年，有司奏奪爵。至十九年，又授孔隱之。兄子熙先謀逆，又失爵。二十八年，更以孔惠雲爲奉聖侯。後有重疾，失爵。孝武大明二年，又以孔邁爲奉聖侯。邁卒，子荂嗣，<span class="jiaozhusup">「荂」三朝本、北監本、毛本、殿本作「莽」，局本作「荂」。按通典禮典作「<img class="font-img" src="../Images/1278.png"/>」，注云：「翊俱反」。當即「荂」字之異文。今定作「荂」。</span>有罪，失爵。
+明帝太寧三年，詔給事奉聖亭侯孔亭四時祠孔子，祭宜如泰始故事。亭五代孫繼之博塞無度，常以祭直顧進，替慢不祀。宋文帝元嘉八年，有司奏奪爵。至十九年，又授孔隱之。兄子熙先謀逆，又失爵。二十八年，更以孔惠雲爲奉聖侯。後有重疾，失爵。孝武大明二年，又以孔邁爲奉聖侯。邁卒，子荂嗣，<span class="jiaozhusup">「荂」三朝本、北監本、毛本、殿本作「莽」，局本作「荂」。按通典禮典作「<img class="font-zhu-img" src="../Images/1278.png"/>」，注云：「翊俱反」。當即「荂」字之異文。今定作「荂」。</span>有罪，失爵。
 </p>
 <p class="em2" id="p44"><a class="gg-link" href="#p44" onclick="return changeColor(this);"></a>
 魏齊王正始二年三月，帝講論語通，五年五月，講尚書通，七年十二月，講禮記通，<span class="jiaozhusup">各本並脫「記」字，據晉書禮志補。</span>並使太常釋奠，以太牢祀孔子於辟雍，以顏淵配。
