--- a/OEBPS/Text/1334.html
+++ b/OEBPS/Text/1334.html
@@ -92,7 +92,7 @@
 夫數相者，必有之徵，既聞之術人，又驗之吾身，理可得而論也。人者兆氣二德，稟體五常。二德有奇偶，五常有勝殺，及其爲人，寧無協沴。亦猶生有好醜，死有夭壽，人皆知其懸天；至於丁年乖遇，中身迂合者，豈可易地哉。是以君子道命愈難，識道愈堅。
 </p>
 <p class="margin2" id="p29"><a class="gg-link" href="#p29" onclick="return changeColor(this);"></a>
-古人恥以身爲溪壑者，屏欲之謂也。欲者，性之煩濁，氣之蒿蒸，故其爲害，則燻心智，耗真情，傷人和，犯天性。雖生必有之，而生之德，猶火含煙而煙妨火，桂懷蠹而蠹殘桂，<span class="jiaozhusup">各本並作「猶火含煙而妨火桂懷蠹而殘桂」，今據藝文類聚二三引、元龜八一六訂正。</span>然則火勝則煙滅，蠹壯則桂折。故性明者欲簡，嗜繁者氣惛，去明即惛，難以生矣。<span class="jiaozhusup">「生矣」各本作「主<img class="font-img" src="../Images/1334.png"/>」，下一字不成字，今據元龜八一六改正。</span>是以中外群聖，<span class="jiaozhusup">「是」各本並作「其」，據元龜八一六改。</span>建言所黜，儒道眾智，發論是除。然有之者不患誤深，<span class="jiaozhusup">「誤」字三朝本脫去，北監本、毛本、殿本、局本作「誤」，元龜八一六作「不」。</span>故藥之者恒苦術淺，所以毀道多而於義寡。<span class="jiaozhusup">各本並脫「於」字，據元龜八一六補。</span>頓盡誠難，每指可易，能易每指，亦明之末。
+古人恥以身爲溪壑者，屏欲之謂也。欲者，性之煩濁，氣之蒿蒸，故其爲害，則燻心智，耗真情，傷人和，犯天性。雖生必有之，而生之德，猶火含煙而煙妨火，桂懷蠹而蠹殘桂，<span class="jiaozhusup">各本並作「猶火含煙而妨火桂懷蠹而殘桂」，今據藝文類聚二三引、元龜八一六訂正。</span>然則火勝則煙滅，蠹壯則桂折。故性明者欲簡，嗜繁者氣惛，去明即惛，難以生矣。<span class="jiaozhusup">「生矣」各本作「主<img class="font-zhu-img" src="../Images/1334.png"/>」，下一字不成字，今據元龜八一六改正。</span>是以中外群聖，<span class="jiaozhusup">「是」各本並作「其」，據元龜八一六改。</span>建言所黜，儒道眾智，發論是除。然有之者不患誤深，<span class="jiaozhusup">「誤」字三朝本脫去，北監本、毛本、殿本、局本作「誤」，元龜八一六作「不」。</span>故藥之者恒苦術淺，所以毀道多而於義寡。<span class="jiaozhusup">各本並脫「於」字，據元龜八一六補。</span>頓盡誠難，每指可易，能易每指，亦明之末。
 </p>
 <p class="margin2" id="p30"><a class="gg-link" href="#p30" onclick="return changeColor(this);"></a>
 廉嗜之性不同，故畏慕之情或異，從事於人者，無一人我之心，不以己之所善謀人，爲有明矣。不以人之所務失我，能有守矣。己所謂然，而彼定不然，弈棋之蔽；悅彼之可，而忘我不可，學嚬之蔽。將求去蔽者，念通怍介而已。
